--- a/DWA14/index.html
+++ b/DWA14/index.html
@@ -14,11 +14,11 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@900&family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
 
-<script src="./script.js" type="module" defer></script>
+<script src="./script.js" defer></script>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.5.0/cdn/themes/light.css" />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.5.0/cdn/shoelace-autoloader.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.1.1/redux.min.js"></script>
+
 
 </head>
 
