--- a/DWA14/index.html
+++ b/DWA14/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@900&family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
 
 <script src="./script.js" defer></script>
+<script src="./tallyapp.js" defer></script>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.5.0/cdn/themes/light.css" />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.5.0/cdn/shoelace-autoloader.js"></script>
