--- a/DWA14/index.html
+++ b/DWA14/index.html
@@ -51,7 +51,7 @@
 
         <button>Settings</button>
     </aside> -->
-
+<script></script>
     <main class="counter">
         <input class="counter_value" data-key="number" readonly value="0">
         <div class="counter_actions">
