--- a/DWA9/index.html
+++ b/DWA9/index.html
@@ -31,6 +31,8 @@
   </head>
   <body>
 
+    <header-component></header-component>
+
     <header class="header">
       <div class="header__inner">
         <div class="header__logo">
